--- a/index.html
+++ b/index.html
@@ -1,60 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Anton&family=Raleway:wght@700">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Chew View!</title>
-  </head>
 
-  <body>
-    <!-- HEADER & SITE DESCRIPTION -->
-    <header id="header" class="header-class">
-      <div class="page-title col s12 m3 l3">
-      <h1 class="header-title center-align">
-        <span><i class="fas fa-utensils"></i> Chew View <i class="fas fa-film"></i></span>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ICONS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Shrikhand&display=swap"
+    rel="stylesheet">
+
+  <title>Chew View!</title>
+</head>
+
+<body>
+  <!-- HEADER -->
+  <header id="header" class="header-class">
+    <div class="page-title col s12 m3 l3">
+      <h1>
+        Chew</br>View
       </h1>
-      </div>
-      <p class="flow-text center-align justify-content-center header-p">
-        Enter a zip code to find local <i class="fas fa-store store-icon"></i> restaurants
-      </p>
-      <p class="flow-text center-align justify-content-center header-p">
-        Search keywords or titles for <i class="fas fa-video video-icon"></i> movie recommendations
-      </p>
-    </header>
+      <p>Take the guesswork out of date night</p>
+      <p>Generate a local restaurant and movie to stream tonight!</p>
+    </div>
+  </header>
 
+  <!-- ZIPCODE ASK -->
+  <section id="zipcode-ask">
     <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
-    <div class="container">
       <div id="search-container" class="search row">
-      <div class = "col s12">
-          <label id="zip-label" class="zip-header section-header">Enter Zip Code</label>
-          <input
-            type="text"
-            id="zip"
-            class="zip-select"
-            pattern="[0-9]{5}"
-            placeholder="00000"
-            onfocus="this.placeholder=''"
-          />
+          <label class="section-header">What's your zipcode?</label>
+          <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
+            onfocus="this.placeholder=''" />
           <button type="submit" id="submit" class="btn search-btn">
             Search Restaurants
           </button>
@@ -62,33 +45,25 @@
           <button type="clear" id="clear" class="btn clear-btn hide">
             Clear Search History
           </button>
-        </div>
 
-      <!-- ZIP CODE SEARCH HISTORY -->  
-      <div id="zip-search-container" class="zip-search-choice col s12">
+        <!-- ZIP CODE SEARCH HISTORY -->
+        <div id="zip-search-container" class="zip-search-choice col s12">
           <label id="zip-search-label" class="zip-search-header section-header hide">Zip Searches</label>
           <ul id="zip-list" class="zip-list-group"></ul>
-      </div>
-      </div>
+        </div>
       </div>
     </div>
+    </div>
+  </section>
 
-    <!-- RESTAURANT SEARCH RESULTS -->
-    <div id="results-container" class="results row">
-      <div
-        id="restaurant-results-container"
-        class="restaurant-results col s12 m6 hide"
-      >
-        <label id="restaurant-label" class="section-header"
-          >Choose Food Style</label
-        >
-        <div class="card horizontal">
-          <div class="card-stacked">
-            <div
-              name="restaurant-list"
-              id="restaurant"
-              class="restaurant-select card-content"
-            ></div>
+  <!-- ALL RESULTS -->
+  <!-- RESTAURANT CONTAINER -->
+  <div id="results-container" class="results row hide">
+    <div id="restaurant-results-container" class="restaurant-results col s12 m6 hide">
+      <label id="restaurant-label" class="section-header">Choose Food Style</label>
+      <div class="card horizontal">
+        <div class="card-stacked">
+          <div name="restaurant-list" id="restaurant" class="restaurant-select card-content"></div>
         </div>
       </div>
     </div>
@@ -108,43 +83,36 @@
         <div id=search-input-container>
           <form action="submit" id="search-form">
             <label for="movie-search-input" class="section-header">Enter Keyword or Title</label>
-            <input
-              type="text"
-              id="movie-search-input"
-              placeholder="Click here to search"
-              onfocus="this.placeholder=''">
+            <input type="text" id="movie-search-input" placeholder="Click here to search" onfocus="this.placeholder=''">
             <button type="submit" id="movie-btn" class="btn movie-btn">Search Movies</button>
           </form>
         </div>
 
-    <!-- MOVIE SEARCH RESULTS -->  
-    </div>
+        <!-- MOVIE SEARCH RESULTS -->
+      </div>
       <label id="movie-label" class="section-header">Movie Options</label>
-        <div id="movie-card-con" class="container">
-          <div name="movie-list" id="movie" class="movie-select row justify-content-center"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- MOVIE DETAIL MODAL -->
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <h4>Movie Details</h4>
-        <p>A bunch of text</p>
-      </div>
-      <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+      <div id="movie-card-con" class="container">
+        <div name="movie-list" id="movie" class="movie-select row justify-content-center"></div>
       </div>
     </div>
   </div>
 
-  <!-- FOOTER -->
-  <footer id="footer" class="page-footer">
-    <div class="container">
-      <h5 class="white-text">❤️ Made With Love by Team 1</h5>
+  <!-- MOVIE DETAIL MODAL -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Movie Details</h4>
+      <p>A bunch of text</p>
     </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer id="footer" class="page-footer center-align">
     <div class="footer-copyright">
-      <div class="container">&copy; 2021 Chew & View, Inc.</div>
+      <div class="container">&copy; 2021 Chew & View</div>
     </div>
   </footer>
 
