initial cuisine view

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+  <!-- CHECK US OUT -->
+  <div id="check-us-out">
+    <p><a href="https://github.com/katiechurchwell/Chew-View"> Check us out on github!</a></p>
+  </div>
+
   <!-- HEADER -->
   <header id="header" class="header-class">
     <div class="page-title col s12 m3 l3">
@@ -60,7 +65,7 @@
   <!-- RESTAURANT CONTAINER -->
   <div id="results-container" class="results row hide">
     <div id="restaurant-results-container" class="restaurant-results col s12 m6 hide">
-      <label id="restaurant-label" class="section-header">Choose Food Style</label>
+      <label id="restaurant-label" class="section-header">Restaurants</label>
       <div class="card horizontal">
         <div class="card-stacked">
           <div name="restaurant-list" id="restaurant" class="restaurant-select card-content"></div>
