--- a/index.html
+++ b/index.html
@@ -39,23 +39,21 @@
   <!-- ZIPCODE ASK -->
   <section id="zipcode-ask">
     <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
-      <div id="search-container" class="search row">
+      <div class="search row search-container">
           <label class="section-header">What's your zipcode?</label>
           <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
             onfocus="this.placeholder=''" />
           <button type="submit" id="submit" class="btn search-btn">
-            Search Restaurants
-          </button>
-
-          <button type="clear" id="clear" class="btn clear-btn hide">
-            Clear Search History
+            SEARCH
           </button>
 
         <!-- ZIP CODE SEARCH HISTORY -->
         <div id="zip-search-container" class="zip-search-choice col s12">
-          <label id="zip-search-label" class="zip-search-header section-header hide">Zip Searches</label>
           <ul id="zip-list" class="zip-list-group"></ul>
         </div>
+        <button type="clear" id="clear" class="btn clear-btn hide">
+          Clear Search History
+        </button>
       </div>
     </div>
     </div>
@@ -84,10 +82,10 @@
 
     <!-- MOVIE SEARCH FUNCTION -->
     <div id="movie-results-container" class="movie-results col s12 m6">
-      <div id="search-container">
+      <div class="search-container">
         <div id=search-input-container>
           <form action="submit" id="search-form">
-            <label for="movie-search-input" class="section-header">Enter Keyword or Title</label>
+            <label for="movie-search-input" class="section-header">Movies</label>
             <input type="text" id="movie-search-input" placeholder="Click here to search" onfocus="this.placeholder=''">
             <button type="submit" id="movie-btn" class="btn movie-btn">Search Movies</button>
           </form>
@@ -95,7 +93,6 @@
 
         <!-- MOVIE SEARCH RESULTS -->
       </div>
-      <label id="movie-label" class="section-header">Movie Options</label>
       <div id="movie-card-con" class="container">
         <div name="movie-list" id="movie" class="movie-select row justify-content-center"></div>
       </div>
@@ -123,6 +120,7 @@
 
   <!-- MATERIALIZE & JAVASCRIPT SOURCES -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="./assets/js/script.js"></script>
   <script src="./assets/js/stylize.js"></script>
   <script src="./assets/js/restaurant-api.js"></script>
   <script src="./assets/js/movies.js"></script>
