--- a/index.html
+++ b/index.html
@@ -6,54 +6,49 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- ICONS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Shrikhand&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
   <title>Chew View!</title>
 </head>
 
 <body>
-  <!-- CHECK US OUT -->
-  <div id="check-us-out">
-    <p><a href="https://github.com/katiechurchwell/Chew-View"> Check us out on github!</a></p>
-  </div>
-
-  <!-- HEADER -->
-  <header id="header" class="header-class">
-    <div class="page-title col s12 m3 l3">
+  <!-- HERO -->
+  <div class="landing-page">
+    <img class="hero" src="./assets/img/ice-cream.png">
+    <!-- HEADER -->
+    <header id="header" class="header-class">
       <h1>
-        Chew</br>View
+        Take the guesswork out of date night
       </h1>
-      <p>Take the guesswork out of date night</p>
       <p>Generate a local restaurant and movie to stream tonight!</p>
-    </div>
-  </header>
+    </header>
 
-  <!-- ZIPCODE ASK -->
-  <section id="zipcode-ask">
-    <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
-    <div class="search row search-container">
-      <label class="section-header">What's your zipcode?</label>
-      <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
-        onfocus="this.placeholder=''" />
-      <button type="submit" id="submit" class="btn search-btn">
-        SEARCH
-      </button>
-    </div>
-    <!-- ZIP CODE SEARCH HISTORY -->
-    <div id="zip-search-container" class="zip-search-choice col s12">
-      <ul id="zip-list" class="zip-list-group"></ul>
-      <button type="clear" id="clear" class="btn clear-btn hide">
-        Clear Search History
-      </button>
-    </div>
+    <!-- ZIPCODE ASK -->
+    <section id="zipcode-ask">
+      <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
+      <div class="search row search-container">
+        <label class="section-header">What's your zipcode?</label>
+        <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
+          onfocus="this.placeholder=''" />
+        <button type="submit" id="submit" class="btn search-btn">
+          SEARCH
+        </button>
+      </div>
+      <!-- ZIP CODE SEARCH HISTORY -->
+      <div id="zip-search-container" class="zip-search-choice col s12">
+        <ul id="zip-list" class="zip-list-group"></ul>
+        <button type="clear" id="clear" class="btn clear-btn hide">
+          Clear Search History
+        </button>
+      </div>
+  </div>
   </section>
 
   <!-- ALL RESULTS -->
@@ -104,6 +99,11 @@
   <footer id="footer" class="page-footer center-align">
     <div class="footer-copyright">
       <div class="container">&copy; 2022 Chew & View</div>
+    </div>
+    <!-- CHECK US OUT -->
+    <div id="check-us-out" class="hoverable">
+      <p><a href="https://github.com/katiechurchwell/Chew-View"><i class="devicon-github-original"></i>Check us out on
+          github!</a></p>
     </div>
   </footer>
 
