--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
   <title>Chew View!</title>
 </head>
@@ -23,33 +23,32 @@
   <div class="landing-page">
     <img class="hero" src="./assets/img/ice-cream.png">
     <!-- HEADER -->
-    <header id="header" class="header-class">
+    <header>
       <h1>
         Take the guesswork out of date night
       </h1>
       <p>Generate a local restaurant and movie to stream tonight!</p>
-    </header>
-
-    <!-- ZIPCODE ASK -->
-    <section id="zipcode-ask">
-      <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
-      <div class="search row search-container">
-        <label class="section-header">What's your zipcode?</label>
-        <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
-          onfocus="this.placeholder=''" />
-        <button type="submit" id="submit" class="btn search-btn">
-          SEARCH
-        </button>
-      </div>
-      <!-- ZIP CODE SEARCH HISTORY -->
-      <div id="zip-search-container" class="zip-search-choice col s12">
-        <ul id="zip-list" class="zip-list-group"></ul>
-        <button type="clear" id="clear" class="btn clear-btn hide">
-          Clear Search History
-        </button>
-      </div>
+      <!-- ZIPCODE ASK -->
+      <section id="zipcode-ask">
+        <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
+        <div class="search row search-container">
+          <label class="section-header">What's your zipcode?</label>
+          <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
+            onfocus="this.placeholder=''" />
+          <button type="submit" id="submit" class="btn search-btn">
+            SEARCH
+          </button>
+        </div>
+        <!-- ZIP CODE SEARCH HISTORY -->
+        <div id="zip-search-container" class="zip-search-choice col s12">
+          <ul id="zip-list" class="zip-list-group"></ul>
+          <button type="clear" id="clear" class="btn clear-btn hide">
+            Clear Search History
+          </button>
+        </div>
   </div>
   </section>
+  </header>
 
   <!-- ALL RESULTS -->
   <div id="results-container" class="results row hide">
@@ -96,15 +95,10 @@
   </div>
 
   <!-- FOOTER -->
-  <footer id="footer" class="page-footer center-align">
-    <div class="footer-copyright">
-      <div class="container">&copy; 2022 Chew & View</div>
-    </div>
+  <footer class="center-align">
     <!-- CHECK US OUT -->
-    <div id="check-us-out" class="hoverable">
       <p><a href="https://github.com/katiechurchwell/Chew-View"><i class="devicon-github-original"></i>Check us out on
           github!</a></p>
-    </div>
   </footer>
 
   <!-- MATERIALIZE & JAVASCRIPT SOURCES -->
