--- a/index.html
+++ b/index.html
@@ -8,47 +8,62 @@
   <!-- ICONS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap"
+    rel="stylesheet">
 
   <title>Chew View!</title>
 </head>
 
 <body>
-  <!-- HERO -->
-  <div class="landing-page">
-    <img class="hero" src="./assets/img/ice-cream.png">
-    <!-- HEADER -->
-    <header>
-      <h1>
-        Take the guesswork out of date night
-      </h1>
-      <p>Generate a local restaurant and movie to stream tonight!</p>
-      <!-- ZIPCODE ASK -->
-      <section id="zipcode-ask">
-        <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
-        <div class="search row search-container">
-          <label class="section-header">What's your zipcode?</label>
-          <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
-            onfocus="this.placeholder=''" />
-          <button type="submit" id="submit" class="btn search-btn">
-            SEARCH
-          </button>
-        </div>
-        <!-- ZIP CODE SEARCH HISTORY -->
-        <div id="zip-search-container" class="zip-search-choice col s12">
-          <ul id="zip-list" class="zip-list-group"></ul>
-          <button type="clear" id="clear" class="btn clear-btn hide">
-            Clear Search History
-          </button>
-        </div>
-  </div>
-  </section>
+  <header>
+      <div class="logo-container">
+        <img class="logo" src="./assets/img/Chew View-logos_black.png" alt="The Chew View logo">
+      </div>
   </header>
+  <!-- HERO -->
+  <div class="landing-page container p-5">
+    <!-- blob -->
+    <img id="blob" src="./assets/img/blob.png">
+    <div class="row">
+      <div class="col">
+        <img class="hero" src="./assets/img/ice-cream.svg" alt="A person having funny holding a giant ice-cream cone!">
+      </div>
+      <!-- HEADER -->
+      <div class="col">
+        <div class="title p-1">
+          <h1>
+            Take the guesswork out of date night
+          </h1>
+          <p>Generate a local restaurant and movie to stream tonight!</p>
+        </div>
+        <!-- ZIPCODE ASK -->
+        <section id="zipcode-ask">
+          <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
+          <div class="search row search-container">
+            <label class="section-header">What's your zipcode?</label>
+            <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
+              onfocus="this.placeholder=''" />
+            <button type="submit" id="submit" class="btn search-btn">
+              SEARCH
+            </button>
+          </div>
+          <!-- ZIP CODE SEARCH HISTORY -->
+          <div id="zip-search-container" class="zip-search-choice col s12">
+            <ul id="zip-list" class="zip-list-group"></ul>
+            <button type="clear" id="clear" class="btn clear-btn hide">
+              Clear Search History
+            </button>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
 
   <!-- ALL RESULTS -->
   <div id="results-container" class="results row hide">
@@ -95,10 +110,9 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="center-align">
-    <!-- CHECK US OUT -->
-      <p><a href="https://github.com/katiechurchwell/Chew-View"><i class="devicon-github-original"></i>Check us out on
-          github!</a></p>
+  <footer>
+    <p><a href="https://github.com/katiechurchwell/Chew-View"><i class="devicon-github-original"></i> Check us out on
+        GitHub!</a></p>
   </footer>
 
   <!-- MATERIALIZE & JAVASCRIPT SOURCES -->
