zip input style

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <!-- ZIPCODE ASK -->
         <section id="zipcode-ask">
           <!-- ZIP CODE / RESTAURANTS SEARCH FUNCTIONS -->
-          <div class="search row search-container">
-            <label class="section-header">What's your zipcode?</label>
+          <label class="section-header">Enter your zipcode to get started</label>
+          <div class="input-group mt-3 d-flex justify-content-center">
             <input type="text" id="zip" class="zip-select" pattern="[0-9]{5}" placeholder="00000"
               onfocus="this.placeholder=''" />
-            <button type="submit" id="submit" class="btn search-btn">
+            <button type="submit" id="submit" class="btn btn-outline-secondary">
               SEARCH
             </button>
           </div>
