layout change onclick (need transition)

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
 <body>
   <header>
-      <div class="logo-container">
-        <img class="logo" src="./assets/img/Chew View-logos_black.png" alt="The Chew View logo">
-      </div>
+    <div class="logo-container">
+      <img class="logo" src="./assets/img/Chew View-logos_black.png" alt="The Chew View logo">
+    </div>
   </header>
   <!-- HERO -->
   <div class="landing-page container p-5">
     <!-- blob -->
     <img id="blob" src="./assets/img/blob.png">
     <div class="row">
-      <div class="col">
-        <img class="hero" src="./assets/img/ice-cream.svg" alt="A person having funny holding a giant ice-cream cone!">
+      <div class="col hero">
+        <img src="./assets/img/ice-cream.svg" alt="A person having funny holding a giant ice-cream cone!">
       </div>
       <!-- HEADER -->
       <div class="col">
@@ -115,12 +115,10 @@
         GitHub!</a></p>
   </footer>
 
-  <!-- MATERIALIZE & JAVASCRIPT SOURCES -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!-- JAVASCRIPT SOURCES -->
   <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/stylize.js"></script>
   <script src="./assets/js/restaurant-api.js"></script>
-  <script src="./assets/js/movies.js"></script>
+  <!--   <script src="./assets/js/movies.js"></script> -->
 </body>
 
 </html>
