--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <!-- HERO -->
   <div class="landing-page container p-5">
     <!-- blob -->
-    <img id="blob" src="./assets/img/blob.png">
+    <svg id="blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+      <path fill="#FFFFFF" d="M41.4,-54.5C56.4,-46.1,73.1,-37.6,76.5,-25.3C79.9,-12.9,70.1,3.3,60.3,15.3C50.5,27.3,40.8,35.1,30.8,42.2C20.8,49.4,10.4,55.9,-2.3,59C-14.9,62.2,-29.8,61.9,-40.8,55C-51.7,48.2,-58.7,34.8,-65.9,19.7C-73.1,4.7,-80.6,-12,-79.2,-28.7C-77.8,-45.4,-67.6,-62.2,-53,-70.7C-38.3,-79.2,-19.1,-79.4,-3,-75.3C13.2,-71.2,26.4,-62.9,41.4,-54.5Z" transform="translate(100 100)" />
+    </svg>
     <div class="row">
       <div class="col hero">
         <img src="./assets/img/ice-cream.svg" alt="A person having funny holding a giant ice-cream cone!">
@@ -54,9 +56,8 @@
             </button>
           </div>
           <!-- ZIP CODE SEARCH HISTORY -->
-          <div id="zip-search-container" class="zip-search-choice col s12">
-            <ul id="zip-list" class="zip-list-group"></ul>
-            <button type="clear" id="clear" class="btn clear-btn hide">
+          <div id="zip-search-container" class="zip-search-choice pt-3">
+            <button type="clear" id="clear" class="btn btn-secondary hide">
               Clear Search History
             </button>
           </div>
@@ -69,9 +70,9 @@
   <div id="results-container" class="results row hide">
 
     <!-- RESTAURANT CONTAINER -->
-    <div id="restaurant-results-container" class="restaurant-results col s12 m6 hide">
-      <div id="restaurant-header"><label id="restaurant-label" class="section-header">Restaurants</label></div>
-      <div name="restaurant-list" id="restaurant" class="restaurant-select card-content"></div>
+    <div class="restaurant-results col s12 m6">
+      <label id="restaurant-label" class="section-header">Restaurants</label>
+      <div id="restaurant-card-container" class="restaurant-select card-content"></div>
     </div>
 
     <!-- RESTAURANT DETAIL MODAL -->
@@ -116,7 +117,6 @@
   </footer>
 
   <!-- JAVASCRIPT SOURCES -->
-  <script src="./assets/js/script.js"></script>
   <script src="./assets/js/restaurant-api.js"></script>
   <!--   <script src="./assets/js/movies.js"></script> -->
 </body>
