--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <div class="logo-container">
       <img class="logo" src="./assets/img/Chew View-logos_black.png" alt="The Chew View logo">
     </div>
-    <div class="github"><a href="https://github.com/katiechurchwell/Chew-View"><i class="devicon-github-original"></i> Check us out on
-      GitHub!</a></div>
+    <div class="github"><a href="https://github.com/katiechurchwell/Chew-View"><i class="devicon-github-original"></i>
+        Check us out on
+        GitHub!</a></div>
   </header>
   <!-- HERO -->
   <div class="landing-page container p-5">
@@ -61,7 +62,7 @@
           </div>
           <!-- ZIP CODE SEARCH HISTORY -->
           <div id="zip-search-container" class="zip-search-choice pt-3">
-            <button type="clear" id="clear" class="btn btn-secondary hide">
+            <button type="clear" id="clear" class="btn btn-outline-secondary hide">
               Clear Search History
             </button>
           </div>
@@ -74,45 +75,43 @@
   <div id="results-container" class="results container hide">
     <div class="row">
       <!-- RESTAURANT CONTAINER -->
-      <div class="restaurant-results col">
-        <label id="restaurant-label" class="section-header">Restaurants</label>
+      <div id="restaurant-results-container" class="col">
         <div id="restaurant-card-container" class="restaurant-select card-content"></div>
-      </div>
-
-      <!-- RESTAURANT DETAIL MODAL -->
-      <div id="restaurant-modal" class="modal">
-        <div class="modal-content">
-        </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-        </div>
       </div>
 
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
         <!-- MOVIE SEARCH -->
         <div id=search-input-container class="input-group mb-3 d-flex">
-            <input type="text" id="movie-search-input" placeholder="Movie keyword or title" onfocus="this.placeholder=''">
-            <button type="submit" id="movie-btn" class="btn btn-outline-secondary">Search</button>
+          <input type="text" id="movie-search-input" placeholder="Movie keyword or title" onfocus="this.placeholder=''">
+          <button type="submit" id="movie-btn" class="btn btn-outline-secondary">Search</button>
         </div>
         <div name="movie-list" id="movie" class="movie-select row justify-content-center"></div>
       </div>
     </div>
+  </div>
 
-    <!-- MOVIE DETAIL MODAL -->
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <h4>Movie Details</h4>
-        <p>A bunch of text</p>
-      </div>
-      <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-      </div>
+  <!-- RESTAURANT DETAIL MODAL -->
+  <div id="restaurant-modal" class="modal fade" tabindex="-1">
+  </div>
+
+  <!-- MOVIE DETAIL MODAL -->
+  <div id="movie-modal" class="modal">
+    <div class="modal-content">
+      <h4>Movie Details</h4>
+      <p>A bunch of text</p>
     </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
   </div>
   </div>
 
   <!-- JAVASCRIPT SOURCES -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="./assets/js/restaurant-api.js"></script>
   <!--   <script src="./assets/js/movies.js"></script> -->
 </body>
