--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       <div id="restaurant-results-container" class="col">
         <div id="restaurant-card-container" class="restaurant-select card-content"></div>
       </div>
-
+      
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
         <!-- MOVIE SEARCH -->
-        <div id=search-input-container class="input-group mb-3 d-flex">
+        <div id="search-input-container" class="input-group mb-3 d-flex">
           <input type="text" id="movie-search-input" placeholder="Movie keyword or title" onfocus="this.placeholder=''">
           <button type="submit" id="movie-btn" class="btn btn-outline-secondary">Search</button>
         </div>
@@ -96,7 +96,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Original</h5>
+          <h5 class="modal-title"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -110,15 +110,20 @@
   </div>
 
   <!-- MOVIE DETAIL MODAL -->
-  <div id="movie-modal" class="modal">
-    <div class="modal-content">
-      <h4>Movie Details</h4>
-      <p>A bunch of text</p>
+  <div id="movie-modal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-  </div>
   </div>
   </div>
 
@@ -127,8 +132,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="./assets/js/restaurant-api.js"></script>
-    <!-- <script src="./assets/js/movies.js"></script> -->
+  <!-- <script src="./assets/js/restaurant-api.js"></script> -->
+    <script src="./assets/js/movies.js"></script>
 </body>
 
 </html>
