--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       <div id="restaurant-results-container" class="col">
         <div id="restaurant-card-container" class="restaurant-select card-content"></div>
       </div>
-      
+
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
         <!-- MOVIE SEARCH -->
-        <div id="search-input-container" class="input-group mb-3 d-flex">
+        <div id="search-input-container" class="input-group mb-3 d-flex justify-content-center">
           <input type="text" id="movie-search-input" placeholder="Movie keyword or title" onfocus="this.placeholder=''">
           <button type="submit" id="movie-btn" class="btn btn-outline-secondary">Search</button>
         </div>
@@ -132,8 +132,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <!-- <script src="./assets/js/restaurant-api.js"></script> -->
-    <script src="./assets/js/movies.js"></script>
+  <script src="./assets/js/restaurant-api.js"></script>
+  <script src="./assets/js/movies.js"></script>
 </body>
 
 </html>
