--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <!-- ALL RESULTS -->
-  <div id="results-container" class="results container hide">
+  <div id="results-container" class="results container">
     <div class="row">
       <!-- RESTAURANT CONTAINER -->
       <div id="restaurant-results-container" class="col">
@@ -81,12 +81,8 @@
 
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
-        <!-- MOVIE SEARCH -->
-        <!-- <div id="search-input-container" class="input-group mb-3 d-flex justify-content-center">
-          <input type="text" id="movie-search-input" placeholder="Movie keyword or title" onfocus="this.placeholder=''">
-          <button type="submit" id="movie-btn" class="btn btn-outline-secondary">Search</button>
-        </div> -->
-        <div name="movie-list" id="movie" class="movie-select row justify-content-center"></div>
+        <div id="movie-genre-container" class="movie-select row justify-content-center"></div>
+        <div id="movie-title-container" class="movie-select row justify-content-center"></div>
       </div>
     </div>
   </div>
