--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
-        <div id="movie-genre-container" class="movie-select row justify-content-center"></div>
-        <div id="movie-title-container" class="movie-select row justify-content-center"></div>
+
+        <div id="movie-genre-container"></div>
+        <div id="movie-title-container"></div>
+
       </div>
     </div>
   </div>
@@ -128,7 +130,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <!-- <script src="./assets/js/restaurant-api.js"></script> -->
+  <script src="./assets/js/restaurant-api.js"></script>
   <script src="./assets/js/movies-tmdb.js"></script>
 </body>
 
