card style, container

--- a/index.html
+++ b/index.html
@@ -76,15 +76,13 @@
     <div class="row">
       <!-- RESTAURANT CONTAINER -->
       <div id="restaurant-results-container" class="col">
-        <div id="restaurant-card-container" class="restaurant-select card-content"></div>
+        <div id="restaurant-category-container"></div>
+        <div id="restaurant-name-container"></div>
       </div>
-
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
-
         <div id="movie-genre-container"></div>
         <div id="movie-title-container"></div>
-
       </div>
     </div>
   </div>
