unique, multiple restaurant modals

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </svg>
     <div class="row">
       <div class="col hero">
-        <img src="./assets/img/ice-cream.svg" alt="A person having funny holding a giant ice-cream cone!">
+        <img src="./assets/img/ice-cream.svg" alt="A person having fun holding a giant ice-cream cone!">
       </div>
       <!-- TITLE -->
       <div class="col">
@@ -70,14 +70,13 @@
       </div>
     </div>
   </div>
-
   <!-- ALL RESULTS -->
-  <div id="results-container" class="results container">
+  <div id="results-container" class="p-3">
     <div class="row">
       <!-- RESTAURANT CONTAINER -->
       <div id="restaurant-results-container" class="col">
-        <div id="restaurant-category-container"></div>
-        <div id="restaurant-name-container"></div>
+        <div id="restaurant-category-container" class="d-flex flex-column align-items-end"></div>
+        <div id="restaurant-name-container" class="d-flex flex-column align-items-end"></div>
       </div>
       <!-- MOVIE CONTAINER -->
       <div id="movie-results-container" class="movie-results col">
@@ -86,7 +85,6 @@
       </div>
     </div>
   </div>
-
   <!-- RESTAURANT DETAIL MODAL -->
   <div id="restaurant-modal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
@@ -104,7 +102,6 @@
     </div>
   </div>
   </div>
-
   <!-- MOVIE DETAIL MODAL -->
   <div id="movie-modal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
