--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap"
     rel="stylesheet">
-  <title>Chew View</title>
+  <title>Chew View | Dinner & Movie Generator</title>
 </head>
 
 <body>
